--- a/package.json
+++ b/package.json
@@ -7,24 +7,32 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "cf-export": "npx contentful-cli space export --config src/contentful/export-config.json --management-token CFPAT-mh1zy0UFrWcRDc8ZZ60CgF7f0o3xpVRVhXy-H2Za3yE --space-id zvq2wf4e9his",
+    "cf-generate-types": "cf-content-types-generator src/contentful/export.json -X --out src/contentful/types"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-spring/web": "^9.7.3",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.5",
+    "cf-content-types-generator": "^2.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "contentful": "^10.8.1",
     "embla-carousel-react": "^8.0.0-rc19",
     "leaflet": "^1.9.4",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
