--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@types/eslint": "^8.44.7",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^18.17.0",
